[package]
name = "vcfs"
version = "0.1.0"
authors = ["Danny McClanahan <1305167+cosmicexplorer@users.noreply.github.com>"]
edition = "2018"

[dependencies]
fs = { path = ".." }
futures01 = { package = "futures", version = "0.1" }
lazy_static = "1"
parking_lot = "0.6"
rayon = "1.1"
store = { path = "../store" }
task_executor = { path = "../../task_executor" }
thrift = "0.13.0"
workunit_store = { path = "../../workunit_store" }

[build-dependencies]
bindgen = "0.53.2"
